# dragons

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  authors.html  dev-requirements.txt  genindex.html  index.html  installation.html  meraxes.html  munge.html  nbody.html  noxfile.py  objects.inv  plotutils.html  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: authors.doctree  environment.pickle  index.doctree  installation.doctree  meraxes.doctree  munge.doctree  nbody.doctree  plotutils.doctree  readme.doctree
.github/workflows/: docs.yaml
_modules/: index.html
_modules/dragons/: plotutils.html
_modules/dragons/meraxes/: galaxy_history.html  io.html  reion.html
_modules/dragons/munge/: munge.html
_modules/dragons/nbody/: io.html
_sources/: index.rst.txt  installation.rst.txt  meraxes.rst.txt  munge.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  installation.rst  meraxes.rst  munge.rst  nbody.rst  plotutils.rst  usage.rst
dragons/: __init__.py  plotutils.py
dragons/meraxes/: __init__.py  galaxy_history.py  io.py  plots.py  postprocessing.py  reion.py
dragons/munge/: __init__.py  munge.py  regrid.c  regrid.pyx  tophat_filter.c  tophat_filter.pyx
dragons/nbody/: __init__.py  io.py  treeflags.py
dragons/stylelib/: dragons.mplstyle  white_background.mplstyle
ssimpl/: __init__.py  matplotlibrc_ssimpl  munge.py  plotutils.py
ssimpl/meraxes/: __init__.py  galaxy_history.py  io.py
ssimpl/munge/: __init__.py  munge.py  regrid.c  regrid.pyx
ssimpl/nbody/: io.py
ssimpl/stylelib/: talk.mplstyle
tests/: test_dragons.py  test_ssimpl.py
