[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dragons/_version.py"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.pyx
  | \.pxd
)/
'''

[tool.isort]
profile = "black"
