[metadata]
name = dragons
license = GPLv3
author = Simon Mutch
author_email = smutch.astro@gmail.com
description = Python tools for dealing with the Meraxes semi-analytic model output and associated processing.
url = https://github.com/meraxes-devs/dragons
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    matplotlib>=1.5.1
    h5py>=2.5.0
    scikit-learn>=0.17.1
    astropy>=1.1.1
    pandas>=0.18.1
    tqdm>=4.7.6
    scipy>=0.17.1
    seaborn>=0.9.0
    click>=7.0
    astrodatapy @ git+https://github.com/qyx268/astrodatapy@master#egg=astrodatapy
    coloredlogs>=10.0

[options.extras_require]
dev =
    Sphinx>=2.3.1
    sphinx-rtd-theme>=0.4.3
    Cython>=0.29.3
